clair/Deployment_clair_clair-combo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    quay-component: clair-combo
  name: clair-combo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      quay-component: clair-combo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        quay-component: clair-combo
    spec:
      containers:
      - env:
        - name: CLAIR_CONF
          value: /clair/config.yaml
        - name: CLAIR_MODE
          value: combo
        image: quay.io/projectquay/clair:4.3.6
        imagePullPolicy: IfNotPresent
        name: clair-combo
        ports:
        - containerPort: 8080
          name: clair-http
          protocol: TCP
        - containerPort: 8089
          name: clair-intro
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /clair/
          name: config
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: redhat-pull-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: clairv4-config-secret
        name: config
