clair/Deployment_clair_clairv4-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    quay-component: clairv4-postgres
  name: clairv4-postgres
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      quay-component: clairv4-postgres
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        quay-component: clairv4-postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_USER
          value: postgres
        - name: POSTGRES_DB
          value: clair
        - name: POSTGRES_PASSWORD
          value: postgres
        - name: PGDATA
          value: /etc/postgres/data
        image: postgres:11.5
        imagePullPolicy: IfNotPresent
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/postgres
          name: postgres-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: clairv4-postgres
