clair/Service_clair_clairv4-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    quay-component: clairv4-postgres
  name: clairv4-postgres
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: postgres
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    quay-component: clairv4-postgres
  sessionAffinity: None
  type: ClusterIP
