clair/Service_clair_clairv4.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    quay-component: clair-combo
  name: clairv4
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: clair-http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: clair-introspection
    port: 8089
    protocol: TCP
    targetPort: 8089
  selector:
    quay-component: clair-combo
  sessionAffinity: None
  type: ClusterIP
